chore: hide commit SHA in updater window
Prevents the commit SHA from being included in the "informational
version" of the assembly, which is where NetSparkle gets the current
version from.

--- a/App/App.csproj
+++ b/App/App.csproj
@@ -24,6 +24,7 @@
         <Product>Coder Desktop</Product>
         <Copyright>© Coder Technologies Inc.</Copyright>
         <ApplicationIcon>coder.ico</ApplicationIcon>
+        <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
     </PropertyGroup>
 
     <PropertyGroup Condition="$(Configuration) == 'Release'">
