--- a/App/App.csproj
+++ b/App/App.csproj
@@ -37,6 +37,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="Views\Pages\PortForwardCreation.xaml" />
+    </ItemGroup>
+
+    <ItemGroup>
         <Content Include="coder.ico" />
         <EmbeddedResource Include="Assets\changelog.css" />
         <Manifest Include="$(ApplicationManifest)" />
@@ -89,5 +93,11 @@
         <ProjectReference Include="..\MutagenSdk\MutagenSdk.csproj" />
         <ProjectReference Include="..\Vpn.Proto\Vpn.Proto.csproj" />
         <ProjectReference Include="..\Vpn\Vpn.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="Views\Pages\PortForwardCreation.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
     </ItemGroup>
 </Project>
