--- a/Vpn.Windows/Vpn.Windows.csproj
+++ b/Vpn.Windows/Vpn.Windows.csproj
@@ -1,22 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <AssemblyName>Coder.Desktop.Vpn</AssemblyName>
+        <AssemblyName>Coder.Desktop.Vpn.Windows</AssemblyName>
         <RootNamespace>Coder.Desktop.Vpn</RootNamespace>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net8.0-windows</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Vpn.Proto\Vpn.Proto.csproj" />
+        <ProjectReference Include="..\Vpn\Vpn.csproj" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
-        <PackageReference Include="Semver" Version="3.0.0" />
-        <PackageReference Include="System.IO.Pipelines" Version="9.0.1" />
     </ItemGroup>
 
 </Project>
