--- a/Vpn.Service/Vpn.Service.csproj
+++ b/Vpn.Service/Vpn.Service.csproj
@@ -1,13 +1,14 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <RootNamespace>Coder.Desktop.Vpn.Service</RootNamespace>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0-windows</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
+        <EnableWindowsTargeting>true</EnableWindowsTargeting>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
-        <LangVersion>13</LangVersion>
+        <RestorePackagesWithLockFile>false</RestorePackagesWithLockFile>
+        <LangVersion>12</LangVersion>
 
         <AssemblyName>CoderVpnService</AssemblyName>
         <ApplicationIcon>coder.ico</ApplicationIcon>
@@ -15,9 +16,13 @@
 
     <PropertyGroup Condition="$(Configuration) == 'Release'">
         <PublishTrimmed>false</PublishTrimmed>
-        <!-- <TrimMode>CopyUsed</TrimMode> -->
         <PublishReadyToRun>true</PublishReadyToRun>
         <SelfContained>false</SelfContained>
+    </PropertyGroup>
+
+    <!-- Define WINDOWS constant on Windows for conditional compilation -->
+    <PropertyGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
+        <DefineConstants>$(DefineConstants);WINDOWS</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
@@ -26,14 +31,25 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
-        <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.4" />
         <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.4" />
-        <PackageReference Include="Microsoft.Security.Extensions" Version="1.3.0" />
         <PackageReference Include="Semver" Version="3.0.0" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
+    </ItemGroup>
+
+    <!-- Windows-only packages -->
+    <ItemGroup Condition="$([MSBuild]::IsOSPlatform('Windows'))">
+        <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Security.Extensions" Version="1.3.0" />
+        <ProjectReference Include="..\Vpn.Windows\Vpn.Windows.csproj" />
+    </ItemGroup>
+
+    <!-- Linux-only packages -->
+    <ItemGroup Condition="$([MSBuild]::IsOSPlatform('Linux'))">
+        <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="9.0.4" />
+        <ProjectReference Include="..\Vpn.Linux\Vpn.Linux.csproj" />
     </ItemGroup>
 
     <ItemGroup>
